# langpify

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
src/entities/: base_agent.py
src/langpify/: __init__.py  base_agent.py
src/langpify/entities/: __init__.py  base_agent.py  entities.py
src/langpify/utils/: __init__.py  llm_utils.py  utils.py
tests/: test.py  test_example.py
tests/ui/: README.md  app.py  requirements.txt  start.sh
tests/ui/static/css/: sims-style.css
tests/ui/static/js/: avatar-3d.js  sims-ui.js
tests/ui/templates/: index.html
