[metadata]
name = langpify
description = SDK para programación basada en agentes neuro-simbolicos
author = Patricio Gerpe
author_email = pj.patriciojulian@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codewithpatelo/langpify
project_urls =
    Documentation = https://langpify.readthedocs.io
    Bug Tracker = https://github.com/codewithpatelo/langpify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
