[metadata]
name = langpify
version = attr: langpify.__version__
description = SDK para programación basada en agentes neuro-simbolicos
author = Patricio Gerpe
author_email = pj.patriciojulian@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codewithpatelo/langpify
project_urls =
    Homepage = https://github.com/codewithpatelo/langpify
    Documentation = https://langpify.readthedocs.io
    Bug Tracker = https://github.com/codewithpatelo/langpify/issues
    Repository = https://github.com/codewithpatelo/langpify
keywords = ai, agents, llm, neuro-symbolic, pii, privacy
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    presidio-analyzer>=2.2.0
    presidio-anonymizer>=2.2.0
    scrubadub>=2.0.0
    typing-extensions>=4.0.0; python_version<"3.10"
    langgraph>=0.0.60
    python-a2a>=0.1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.3.1
    black>=23.3.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.3.0
    pytest-cov>=4.1.0
